# SVMSentenceValidation

./: CMakeLists.txt
cmake/: dlib.cmake
include/: sentence_svm_2gram.hpp  simple_archive.hpp  word_counter_2gram.hpp
lib/: word_counter_2gram.cpp
src/: main.cpp
